# warrenapp

./: LICENSE  README.md  pyproject.toml
src/warrenapp/: apps.py  models.py
src/warrenapp/badelf_tools/: badelf_algorithm_functions.py  badelf_algorithm_functions1.py  badelf_algorithm_functions_1.py  badelf_algorithm_functions_tests.py  utilities.py
src/warrenapp/inputs/: warren_potcar_mappings.py
src/warrenapp/outputs/: __init__.py  elfcar.py
src/warrenapp/workflows/: __init__.py
src/warrenapp/workflows/nested_dft/: __init__.py  double_relaxation_static_base.py  prepop_relaxation_static_hse.py  prepop_relaxation_static_hse_hse.py  prepop_relaxation_static_pbe_pbe.py  prepop_relaxation_static_pbesol.py  prepop_relaxation_static_pbesol_hse.py  prepop_relaxation_static_pbesol_hse_hse.py  prepop_relaxation_static_pbesol_pbesol.py  relaxation_static_base.py
warren/: models.py
warren/badelf_tools/: badelf_algorithm_functions.py  utilities.py
warren/workflows/population_analysis/: __init__.py  badelf_hse.py  badelf_pbe.py  bader_badelf_hse.py  bader_badelf_pbe.py  bader_hse.py  bader_pbe.py  base.py  elf_hse.py  elf_pbe.py  warren_badelf_v3_7.py
warren/workflows/relaxation/: scan.py
warren/workflows/static_energy/: hse.py  hsesol.py  pbe.py  pbe_metal.py  pbesol.py  scan.py
warrenapp/: apps.py  models.py
warrenapp/workflows/: __init__.py
warrenapp/workflows/population_analysis/: bader_badelf_pbe.py  bader_hse.py  base.py  elf_hse.py
warrenapp/workflows/relaxation/: hse.py  hsesol.py  pbe.py  pbe_metal.py  pbesol.py
(+38 files in other folders)
